force-app/main/default/objects/Template__c/Template__c.object-meta.xml
<CustomObject>
    <label>WB Template</label>
    <nameField>
        <displayFormat>WBC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WB Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>