force-app/main/default/objects/Template__c/fields/Button_Type__c.field-meta.xml
<CustomField>
    <fullName>Button_Type__c</fullName>
    <label>Button Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUICK_REPLY</fullName>
            </value>
            <value>
                <fullName>Marketing opt-out</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
                <label>Visit website</label>
            </value>
            <value>
                <fullName>PHONE_NUMBER</fullName>
                <label>Call Phone Number</label>
            </value>
            <value>
                <fullName>COPY_CODE</fullName>
                <label>Copy offer code</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>