force-app/main/default/objects/Template__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>af</fullName>
                <label>Afrikaans</label>
            </value>
            <value>
                <fullName>sq</fullName>
                <label>Albanian</label>
            </value>
            <value>
                <fullName>ar</fullName>
                <label>Arabic</label>
            </value>
            <value>
                <fullName>az</fullName>
                <label>Azerbaijani</label>
            </value>
            <value>
                <fullName>bn</fullName>
                <label>Bengali</label>
            </value>
            <value>
                <fullName>bg</fullName>
                <label>Bulgarian</label>
            </value>
            <value>
                <fullName>ca</fullName>
                <label>Catalan</label>
            </value>
            <value>
                <fullName>zh_CN</fullName>
                <label>Chinese (CHN)</label>
            </value>
            <value>
                <fullName>zh_HK</fullName>
                <label>Chinese (HKG)</label>
            </value>
            <value>
                <fullName>zh_TW</fullName>
                <label>Chinese (TAI)</label>
            </value>
            <value>
                <fullName>hr</fullName>
                <label>Croatian</label>
            </value>
            <value>
                <fullName>cs</fullName>
                <label>Czech</label>
            </value>
            <value>
                <fullName>da</fullName>
                <label>Danish</label>
            </value>
            <value>
                <fullName>nl</fullName>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>en</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>en_GB</fullName>
                <label>English (UK)</label>
            </value>
            <value>
                <fullName>en_US</fullName>
                <label>English (US)</label>
            </value>
            <value>
                <fullName>et</fullName>
                <label>Estonian</label>
            </value>
            <value>
                <fullName>fil</fullName>
                <label>Filipino</label>
            </value>
            <value>
                <fullName>fi</fullName>
                <label>Finnish</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>ka</fullName>
                <label>Georgian</label>
            </value>
            <value>
                <fullName>de</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>el</fullName>
                <label>Greek</label>
            </value>
            <value>
                <fullName>gu</fullName>
                <label>Gujarati</label>
            </value>
            <value>
                <fullName>ha</fullName>
                <label>Hausa</label>
            </value>
            <value>
                <fullName>he</fullName>
                <label>Hebrew</label>
            </value>
            <value>
                <fullName>hi</fullName>
                <label>Hindi</label>
            </value>
            <value>
                <fullName>hu</fullName>
                <label>Hungarian</label>
            </value>
            <value>
                <fullName>id</fullName>
                <label>Indonesian</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>