force-app/main/default/objects/Template__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <length>520</length>
    <type>LongTextArea</type>
</CustomField>