force-app/main/default/objects/Template__c/fields/WBFooter_Body__c.field-meta.xml
<CustomField>
    <fullName>WBFooter_Body__c</fullName>
    <label>WBFooter Body</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>