force-app/main/default/objects/Template__c/fields/WBHeader_Body__c.field-meta.xml
<CustomField>
    <fullName>WBHeader_Body__c</fullName>
    <label>WBHeader Body</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>