force-app/main/default/objects/Template__c/fields/WBImage_Header_Handle__c.field-meta.xml
<CustomField>
    <fullName>WBImage_Header_Handle__c</fullName>
    <label>WBImage Header Handle</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>