force-app/main/default/objects/Template__c/fields/WBTemplate_Body__c.field-meta.xml
<CustomField>
    <fullName>WBTemplate_Body__c</fullName>
    <label>WBTemplate Body</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>